--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "atlas-latest-experiments-cards",
-  "version": "1.2.1",
+  "name": "atlas-latest-experiments-panel",
+  "version": "0.9.0",
   "description": "A package that renders grids of cards.",
   "main": "lib/index.js",
   "scripts": {
@@ -25,7 +25,9 @@
   },
   "author": "Expression Atlas developers <arrayexpress-atlas@ebi.ac.uk>",
   "collaborators": [
-    "Monica Jianu <monica@ebi.ac.uk>"
+    "Lingyun Zhao <lingyun@ebi.ac.uk>",
+    "Monica Jianu <monica@ebi.ac.uk>",
+    "Alfonso Muñoz-Pomer Fuentes <amunoz@ebi.ac.uk>"
   ],
   "license": "Apache-2.0",
   "repository": {
@@ -33,32 +35,33 @@
     "url": "https://github.com/ebi-gene-expression-group/atlas-homepage-cards"
   },
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.6.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
     "react-ebi-species": "^2.0.0",
-    "styled-components": "^4.1.1",
+    "styled-components": "^4.1.3",
     "urijs": "^1.19.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "coveralls": "^3.0.2",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "eslint": "^5.9.0",
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^1.0.1",
+    "coveralls": "^3.0.3",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "eslint": "^5.14.1",
     "eslint-config-gene-expression": "^0.4.2",
-    "fetch-mock": "^7.2.5",
-    "jest": "^23.6.0",
-    "react-dom": "^16.6.1",
-    "react-test-renderer": "^16.6.1",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "fetch-mock": "^7.3.1",
+    "jest": "^24.1.0",
+    "node-fetch": "^2.3.0",
+    "react-dom": "^16.8.3",
+    "react-test-renderer": "^16.8.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
