--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepack": "rm -rf lib && babel src -d lib --copy-files",
     "testOnly": "jest --env=jsdom --coverage --verbose",
     "test": "npm run testOnly",
-    "posttest": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "posttest": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "postversion": "npm publish",
     "postpublish": "git push && git push --tags"
   },
