--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atlas-latest-experiments-panel",
   "version": "0.9.0",
-  "description": "A package that renders grids of cards.",
+  "description": "A package that renders links to experiments in (Single Cell) Expression Atlas in style.",
   "main": "lib/index.js",
   "scripts": {
     "prepack": "rm -rf lib && babel src -d lib --copy-files",
